[gd_scene load_steps=20 format=3 uid="uid://cyv0u62cwr4g"]

[ext_resource type="Script" path="res://scripts/endless_level_scene.gd" id="1_cgq1f"]
[ext_resource type="PackedScene" uid="uid://bigvbyheh0exb" path="res://scenes/mountain_handler.tscn" id="2_j4svi"]
[ext_resource type="Texture2D" uid="uid://cxyelblnrdkos" path="res://assets/sprites/clouds3.png" id="3_pktsj"]
[ext_resource type="PackedScene" uid="uid://bj6hqwphu854y" path="res://scenes/climber.tscn" id="3_uxfjg"]
[ext_resource type="Texture2D" uid="uid://co3jvimsmj2k4" path="res://assets/sprites/clouds1.png" id="3_w8li4"]
[ext_resource type="Texture2D" uid="uid://b8bqvtlpnfsbw" path="res://assets/sprites/clouds2.png" id="4_ga7a4"]
[ext_resource type="PackedScene" uid="uid://dp4ubt7ocp0jh" path="res://scenes/player.tscn" id="4_qhqjw"]
[ext_resource type="PackedScene" uid="uid://dajuooiedhdk8" path="res://scenes/player_hand.tscn" id="5_58g4u"]
[ext_resource type="Shader" path="res://scripts/shaders/world_pos_tile.gdshader" id="5_jqdpy"]
[ext_resource type="Texture2D" uid="uid://2hes4exf2rr4" path="res://assets/sprites/ground_tile.png" id="5_o3cj6"]
[ext_resource type="PackedScene" uid="uid://78vn3c4pqhjj" path="res://scenes/anger_meter.tscn" id="11_kixnc"]
[ext_resource type="Theme" uid="uid://d0d4mhd7e8cfk" path="res://assets/ui_theme.tres" id="11_p744n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwbdo"]
shader = ExtResource("5_jqdpy")
shader_parameter/image_scale = 500.0
shader_parameter/time_scale = Vector2(0.001, 0)
shader_parameter/parallax_scale = Vector2(0, 0)
shader_parameter/cam_pos = null
shader_parameter/image_texture = ExtResource("3_pktsj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_suplq"]
shader = ExtResource("5_jqdpy")
shader_parameter/image_scale = 750.0
shader_parameter/time_scale = Vector2(0.005, 0)
shader_parameter/parallax_scale = Vector2(0, 0.02)
shader_parameter/cam_pos = null
shader_parameter/image_texture = ExtResource("4_ga7a4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hdump"]
shader = ExtResource("5_jqdpy")
shader_parameter/image_scale = 2000.0
shader_parameter/time_scale = Vector2(0.02, 0)
shader_parameter/parallax_scale = Vector2(0, 0.1)
shader_parameter/cam_pos = null
shader_parameter/image_texture = ExtResource("3_w8li4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vq41b"]
shader = ExtResource("5_jqdpy")
shader_parameter/image_scale = 500.0
shader_parameter/time_scale = Vector2(0, 0)
shader_parameter/parallax_scale = Vector2(0, 0)
shader_parameter/cam_pos = null
shader_parameter/image_texture = ExtResource("5_o3cj6")

[sub_resource type="Animation" id="Animation_efreu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/countdown:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/countdown:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_psy55"]
resource_name = "countdown"
length = 4.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/countdown:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.95, 1.95, 2.95),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "CLIMB"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/countdown:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.95, 1, 1.95, 2, 2.95, 3, 3.95),
"transitions": PackedFloat32Array(2, 1, 1, 1, 2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbftm"]
_data = {
"RESET": SubResource("Animation_efreu"),
"countdown": SubResource("Animation_psy55")
}

[node name="endlessLevelScene" type="Node2D"]
script = ExtResource("1_cgq1f")

[node name="camArm" type="Node2D" parent="."]

[node name="levelCam" type="Camera2D" parent="camArm"]

[node name="skyBGPoly" type="Polygon2D" parent="camArm/levelCam"]
color = Color(0.54902, 0.670588, 0.631373, 1)

[node name="cloudBG3" type="Polygon2D" parent="camArm/levelCam"]
material = SubResource("ShaderMaterial_rwbdo")

[node name="cloudBG2" type="Polygon2D" parent="camArm/levelCam"]
material = SubResource("ShaderMaterial_suplq")

[node name="cloudBG1" type="Polygon2D" parent="camArm/levelCam"]
material = SubResource("ShaderMaterial_hdump")

[node name="mountainHandler" parent="." instance=ExtResource("2_j4svi")]

[node name="climber" parent="." node_paths=PackedStringArray("climbFollower") instance=ExtResource("3_uxfjg")]
climbFollower = NodePath("../pathClimber")
rope_starting_length = 15

[node name="pathClimber" type="PathFollow2D" parent="."]

[node name="player" parent="." node_paths=PackedStringArray("hand") instance=ExtResource("4_qhqjw")]
hand = NodePath("../playerHand")

[node name="playerHand" parent="." node_paths=PackedStringArray("cam", "player") instance=ExtResource("5_58g4u")]
cam = NodePath("../camArm/levelCam")
player = NodePath("../player")

[node name="rocks" type="Node2D" parent="."]

[node name="groundPolygon" type="Polygon2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_vq41b")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.819608, 0.694118, 0.529412, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
visible = false
offset_right = 42.0
offset_bottom = 23.0
text = "penis"

[node name="angerMeter" parent="UI" instance=ExtResource("11_kixnc")]

[node name="countdown" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -48.5
offset_right = 20.0
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_p744n")
theme_type_variation = &"uiLabel"
theme_override_font_sizes/font_size = 288
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="countdownAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qbftm")
}
